
  * Added optional type format detection based on colors used.

  * Added Joy2B+ controller support.

  * Enhanced Kid Vid support to play tape audio.

  * Added port selection, used for controller default mapping.

  * Added missing PlusROM support for E7 bankswitching.

  * Accelerated emulation up to ~15% (ARM).

  * Added limited GameLine Master Module bankswitching support.

  * Added BUS bankswitching support for some older demos.

  * Fixed broken 7800 pause key support.

  * Fixed broken mouse and Stelladaptor input for Driving Controller.

  * Added user defined CPU cycle timers to debugger.

  * Removed 'launcherroms' option, since it was causing some issues.

  * For UNIX systems: Now defaults to using system-installed libsqlite3
    when available, and fixes delay on exiting app experienced on some
    systems.

-Have fun!


6.6 to 6.7 (June 13, 2022)

  * IMPORTANT NOTES:
    - Because of fixes to JSON handling, all remappings will be reset
      to defaults; if you had custom mappings, they will need to be
      re-entered again.
    - Because of internal changes, all state files are now invalid.

  * Completely reworked the file launcher:
    - Redesigned user interface
    - Added tracking of user favorites, recently played and most popular
      games
    - Added virtual directories for selecting tracked games
    - Added quick path navigation
    - Added navigation history
    - Added icons for files and directories
    - Added option to show/hide file extensions
    - Extended context menu and shortcuts
    - Fixed sluggish behaviour when reading large and/or invalid files

  * Added hotkey display to tooltips.

  * Added option to automatically pause emulation when focus is lost.

  * Added option to toggle autofire mode.

  * Improved controller mappings for Paddles.

  * Improved controller mappings for Driving controllers.

  * Improved Mindlink support.

  * Added another oddball TIA glitch option for score mode color.
