@@ -918,6 +918,7 @@
     <ClCompile Include="..\..\debugger\gui\CartRamWidget.cxx">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug-NoDebugger|x64'">true</ExcludedFromBuild>
     </ClCompile>
+    <ClCompile Include="..\..\debugger\gui\Cart03E0Widget.cxx" />
     <ClCompile Include="..\..\debugger\gui\CartTVBoyWidget.cxx">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug-NoDebugger|x64'">true</ExcludedFromBuild>
     </ClCompile>
@@ -978,6 +979,7 @@
     </ClCompile>
     <ClCompile Include="..\..\debugger\TimerMap.cxx" />
     <ClCompile Include="..\..\emucore\Bankswitch.cxx" />
+    <ClCompile Include="..\..\emucore\Cart03E0.cxx" />
     <ClCompile Include="..\..\emucore\Cart3EPlus.cxx" />
     <ClCompile Include="..\..\emucore\Cart3EX.cxx" />
     <ClCompile Include="..\..\emucore\Cart4KSC.cxx" />
@@ -2108,6 +2110,7 @@
     <ClInclude Include="..\..\debugger\gui\BoosterWidget.hxx">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug-NoDebugger|x64'">true</ExcludedFromBuild>
     </ClInclude>
+    <ClInclude Include="..\..\debugger\gui\Cart03E0Widget.hxx" />
     <ClInclude Include="..\..\debugger\gui\Cart0840Widget.hxx">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug-NoDebugger|x64'">true</ExcludedFromBuild>
     </ClInclude>
@@ -2303,6 +2306,7 @@
     <ClInclude Include="..\..\emucore\AmigaMouse.hxx" />
     <ClInclude Include="..\..\emucore\AtariMouse.hxx" />
     <ClInclude Include="..\..\emucore\Bankswitch.hxx" />
+    <ClInclude Include="..\..\emucore\Cart03E0.hxx" />
     <ClInclude Include="..\..\emucore\Cart3EPlus.hxx" />
     <ClInclude Include="..\..\emucore\Cart3EX.hxx" />
     <ClInclude Include="..\..\emucore\Cart4KSC.hxx" />
